@@ -22,6 +22,7 @@
 
 #include <gst/gstconfig.h>
 #include <glib-object.h>
+#include <gst/gstclock.h>
 
 G_BEGIN_DECLS
 
@@ -133,6 +134,9 @@ gboolean                gst_structure_get_double           (const GstStructure  
 gboolean                gst_structure_get_date             (const GstStructure      *structure,
 							    const gchar             *fieldname,
                                                             GDate                  **value);
+gboolean                gst_structure_get_clock_time       (const GstStructure      *structure,
+							    const gchar             *fieldname,
+							    GstClockTime            *value);
 G_CONST_RETURN gchar *  gst_structure_get_string           (const GstStructure      *structure,
 							    const gchar             *fieldname);
 
